# freegpt4

./: .pdm-python  README.md  api.py  free-gpt4.py  pyproject.toml
backend/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
backend/gpt4_copilot_free_api/: server.py
backend/src/gpt4_copilot_free_api/: server.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: chat.tsx
frontend/src/lib/: utils.ts
