[project]
name = "gpt4-copilot-free-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "xDepcio", email = "olek.drwal@gmail.com"},
]
dependencies = [
    "flask>=3.0.3",
    "requests>=2.31.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[project.entry-points."console_scripts"]
freegpt4 = "gpt4_copilot_free_api.server:main"
